# rust-proxy

./: Cargo.toml  DOCKERHUB.md  Dockerfile  README.md  config.yaml  docker-compose.yml
.github/workflows/: ci.yml
src/: api.rs  auth.rs  config.rs  db.rs  logger.rs  main.rs  proxy.rs  static_files.rs
static/: index.html  login.html
